# rnode

./: .env.example  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cargo.yml  release.yml  test.yml
backend/: Cargo.toml
backend/src/: benchdb.rs  dblock.rs  lib.rs  types.rs
backend/tests/: dblock.rs
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  rpc_provider.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: chain_config.rs  id.rs  lib.rs  types.rs
crates/derivation/: Cargo.toml
crates/derivation/src/: batch.rs  batch_queue.rs  channel.rs  channel_bank.rs  data.rs.bak  derivation.rs  frame.rs  lib.rs  read_adapter.rs
crates/mpt/: Cargo.toml
crates/mpt/fuzz/: Cargo.toml
crates/mpt/fuzz/fuzz_targets/: mpt_insert_get.rs
crates/mpt/src/: display.rs  lib.rs  misc.rs  mpt_test.rs  test.rs
derivation/: Cargo.toml
derivation/src/: batches.rs  channel_bank.rs  channels.rs  frames.rs  lib.rs  sys_config.rs
execution/: Cargo.toml
execution/src/: lib.rs
execution/tests/: call.rs
go-mpt/: go.mod  go.sum  main.go
rnode/: Cargo.toml
rnode/src/: main.rs
src/: Cargo.toml  client.rs  data.rs  lib.rs  main.rs  main.rs.bak  mpt.rs  oracle.rs  types.rs
tests/: client.rs  execution.rs  types.rs
