[package]
name = "rsnode"
version = "0.1.0"
edition = "2021"
autobenches = false

[workspace]
members = [
    "cli",
    "client",
    "common",
    "derivation",
    "backend",
    "execution",
]

[dependencies]
cli = { path = "./cli" }
client = { path = "./client" }
common = { path = "./common" }
derivation = { path = "./derivation" }
backend = { path = "./backend" }
execution = { path = "./execution" }
