[workspace]
members = [
	"rnode",
	"crates/client",
	"crates/core",
	"crates/derivation",
	"crates/mpt",
]

default-members = ["rnode"]

# We need to patch these crates because reth does so as well
# and we rely on reth for primitives, hashing, & RLP.
[patch.crates-io]
# revm = { git = "https://github.com/bluealloy/revm" }
revm-primitives = { git = "https://github.com/bluealloy/revm" }
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
ruint = { git = "https://github.com/paradigmxyz/uint" }