[package]
name = "client"
version = "0.1.0"
edition = "2021"


[dependencies]

# Local
core = {path = "../core"}

# Non-Local
ethers-core = "1.0.2"
ethers-providers = "1.0.2"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.8"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", features = [] }
