[package]
name = "mpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = {path = "../core"}
reth-rlp = { git = "https://github.com/paradigmxyz/reth", features = ["derive"] }
ethers-core = "1.0.2"

